--- a/app/templates/calculator2.html
+++ b/app/templates/calculator2.html
@@ -10,36 +10,79 @@
 {% endblock %}
 {% block content %}
 
-    <h1>My Calculator</h1>
      {% if error %}
          <div class="alert alert-danger error" role="alert">
              {{ error }}
         </div>
       {% endif %}
-  <div class="mb-3 row">
+<div class="p-5 my-4 bg-dark text-white rounded-3 info shadow-lg p-3  rounded">
+    <div class="container-fluid py-2 mx-4">
+        <div class="row d-flex justify-content-center">
 
-    <form action="/calculator" method="POST">
-        <label for="value1" class="col-sm-2 col-form-label">Value 1:</label><br>
-        <input type="text" id="value1" name="value1" value="1"><br>
-        <label for="value2" class="col-sm-2 col-form-label">Value 2:</label><br>
-        <input type="text" id="value2" name="value2" value="2"><br>
-        <fieldset>
-        <legend>Operation</legend>
-          <div>
-            <input type="radio" name="operation" id="addition" value="addition" checked>
-            <label for="addition">addition</label>
-          </div>
-          <div>
-            <input type="radio" name="operation" id="subtraction" value="subtraction">
-            <label for="subtraction">subtraction</label>
-          </div>
-          <div>
-            <input type="radio" name="operation" id="multiplication" value="multiplication">
-            <label for="multiplication">multiplication</label>
-          </div>
-        </fieldset>
+            <h4 class="text-center"><u>Calculator</u></h4><br>
+            <div class="d-flex justify-content-center">
+                <form action="/calculator" method="POST">
+                    <div class="row mb-3">
+                        <label for="value1" class="col-sm-3 col-form-label">Value_1</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="value1" name="value1" value="1">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label for="value2" class="col-sm-3 col-form-label">Value_2</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="value2" name="value2" value="2">
+                        </div>
+                    </div>
+                    <fieldset class="row mb-3">
+                        <legend class="col-form-label col-sm-4 pt-0">Operation</legend>
+                        <div class="col-sm-6">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="operation" id="addition"
+                                       value="addition" checked>
+                                <label class="form-check-label" for="addition">
+                                    Addition
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="operation" id="subtraction"
+                                       value="subtraction">
+                                <label class="form-check-label" for="subtraction">
+                                    Subtraction
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="operation" id="multiplication"
+                                       value="multiplication">
+                                <label class="form-check-label" for="multiplication">
+                                    Multiplication
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="operation" id="division"
+                                       value="division">
+                                <label class="form-check-label" for="division">
+                                    Division
+                                </label>
+                            </div>
 
-        <input type="submit" value="Submit">
-    </form>
-  </div>
+                        </div>
+                    </fieldset>
+                    <div class="row mb-3">
+                        <div class="col-sm-10 offset-sm-2">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                <label class="form-check-label" for="gridCheck1">
+                                    Example checkbox
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
 {% endblock %}
