--- a/app/templates/calculator2.html
+++ b/app/templates/calculator2.html
@@ -1,45 +1,49 @@
 {% extends "base.html" %}
 {% block title %}Index{% endblock %}
 {% block head %}
-    {{ super() }}
-    <style type="text/css">
-        .important {
-            color: #336699;
-        }
-    </style>
+{{ super() }}
+<style type="text/css">
+    .important {
+        color: #336699;
+    }
+</style>
 {% endblock %}
 {% block content %}
 
-     {% if error %}
-         <div class="alert alert-danger error" role="alert">
-             {{ error }}
-        </div>
-      {% endif %}
+{% if error %}
+<div class="alert alert-danger error alert-dismissible fade show" role="alert">
+    <span>{{ message }}</span>
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    {{ error }}
+</div>
+{% endif %}
 <div class="p-5 my-4 bg-dark text-white rounded-3 info shadow-lg p-3  rounded">
     <div class="container-fluid py-2 mx-4">
         <div class="row d-flex justify-content-center">
 
-            <h4 class="text-center"><u>Calculator</u></h4><br>
+
             <div class="d-flex justify-content-center">
+                <span class="border border-info rounded p-3 p-5 my-4 bg-white text-dark shadow-lg ">
                 <form action="/calculator" method="POST">
+                    <h4 class="text-center"><u>Calculator</u></h4><br>
                     <div class="row mb-3">
                         <label for="value1" class="col-sm-3 col-form-label">Value_1</label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" id="value1" name="value1" value="1">
+                            <input type="text" class="form-control" id="value1" name="value1">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="value2" class="col-sm-3 col-form-label">Value_2</label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" id="value2" name="value2" value="2">
+                            <input type="text" class="form-control" id="value2" name="value2">
                         </div>
                     </div>
                     <fieldset class="row mb-3">
-                        <legend class="col-form-label col-sm-4 pt-0">Operation</legend>
+                        <legend class="col-form-label col-sm-8 pt-0">Operation :</legend>
                         <div class="col-sm-6">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="operation" id="addition"
-                                       value="addition" checked>
+                                       value="addition">
                                 <label class="form-check-label" for="addition">
                                     Addition
                                 </label>
@@ -79,7 +83,9 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
+
                 </form>
+                    </span>
             </div>
 
         </div>
