--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -1,25 +1,46 @@
 {% extends "base.html" %}
 {% block title %}Index{% endblock %}
 {% block head %}
-    {{ super() }}
-    <style type="text/css">
-        .important { color: #336699; }
-    </style>
+{{ super() }}
+<style type="text/css">
+    .important {
+        color: #336699;
+    }
+</style>
 {% endblock %}
 {% block content %}
-    <h1>Calculation Result</h1>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-success" role="alert">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
+<div class="container">
+    <h4 class="text-center">~ Calculation Result ~</h4>
+
+    <table class="table table-hover table-bordered table-dark table-striped">
+        <tr>
+            <th width="50%">Value 1</th>
+            <td>{{ value1 }}</td>
+        </tr>
+        <tr>
+            <th>Value 2</th>
+            <td>{{ value2 }}</td>
+        </tr>
+        <tr>
+            <th>Operation:</th>
+            <td>{{ operation }}</td>
+        </tr>
+        <tr>
+            <th>Result:</th>
+            <td colspan="2">{{ result }}</td>
+        </tr>
+    </table>
+
+</div>
+
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-success" role="alert">
+    {{ message }}
+</div>
+{% endfor %}
+{% endif %}
 {% endwith %}
-    <strong>Value 1: </strong> {{ value1 }} <br>
-    <strong>Value 2: </strong> {{ value2 }} <br>
-    <strong>Operation: </strong> {{ operation }} <br>
-    <strong>Result: </strong> {{ result }}
 
 {% endblock %}
