--- a/app/templates/calculator2.html
+++ b/app/templates/calculator2.html
@@ -28,14 +28,16 @@
                     <h4 class="text-center"><u>Calculator</u></h4><br>
                     <div class="row mb-3">
                         <label for="value1" class="col-sm-3 col-form-label">Value_1</label>
-                        <div class="col-sm-6">
-                            <input type="text" class="form-control" id="value1" name="value1">
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="value1" name="value1"
+                                   placeholder="First number">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="value2" class="col-sm-3 col-form-label">Value_2</label>
-                        <div class="col-sm-6">
-                            <input type="text" class="form-control" id="value2" name="value2">
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="value2" name="value2"
+                                   placeholder="Second number">
                         </div>
                     </div>
                     <fieldset class="row mb-3">
@@ -74,11 +76,17 @@
                     </fieldset>
                     <div class="row mb-3">
                         <div class="col-sm-10 offset-sm-2">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                <label class="form-check-label" for="gridCheck1">
-                                    Example checkbox
-                                </label>
+                            <div class="form-group">
+                                <div class="form-check">
+                                    <input class="form-check-input is-invalid" type="checkbox" value=""
+                                           id="invalidCheck3" required>
+                                        <label class="form-check-label" for="invalidCheck3">
+                                             Agree
+                                        </label>
+                                        <div class="invalid-feedback">
+                                            You must agree before submitting.
+                                        </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -87,6 +95,9 @@
                 </form>
                     </span>
             </div>
+
+            <!--            comment-->
+            <!--            comment-->
 
         </div>
     </div>
