--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -17,18 +17,12 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
 
-    <table class="table table-hover table-bordered table-dark table-striped">
+    <table class="table table-hover table-bordered border-primary table-dark table-striped">
         <tr>
             <th>Value 1</th>
             <th>Value 2</th>
             <th>Operation</th>
             <th>Result</th>
-        </tr>
-        <tr>
-            <td>{{ value1 }}</td>
-            <td>{{ value2 }}</td>
-            <td>{{ operation }}</td>
-            <td colspan="2">{{ result }}</td>
         </tr>
         <tr>
             <td>{{ value1 }}</td>
