--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,15 +11,33 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <title>Hello, world!</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Welcome Page</title>
 
 </head>
 <body>
 <div class="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-0">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" class="img-responsive" alt="logo"></a>
+        <a class="navbar-brand" href="/"> Home </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,13 +45,9 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="history.html">Brief History</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="web.html">Beginning of Web<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/calculator">Calculator</a>
+                    <a class="nav-link" href="/calculator">Calculator
+                    <span class="badge badge-danger">NEW</span>
+                    </a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
@@ -42,28 +56,20 @@
                         <span class="badge badge-dark">4</span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
-                        <a class="dropdown-item" href="Article1_RJ.html">Pylint[Tips & Tricks]</a>
-                        <a class="dropdown-item" href="Article2_RJ.html">AAA Testing</a>
-                        <a class="dropdown-item active" href="Article3_RJ.html">OOPs Concept</a>
-                        <a class="dropdown-item" href="SoC.html">Soc[Separation of Concern]</a>
+                        <a class="dropdown-item" href="/article1">Pylint[Tips & Tricks]</a>
+                        <a class="dropdown-item" href="/article2">AAA Testing</a>
+                        <a class="dropdown-item" href="/article3">OOPs Concept</a>
+                        <a class="dropdown-item" href="/article4">Soc[Separation of Concern]</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
-                        More information
-                        <span class="badge badge-dark">3</span>
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="software.html">IBM/Microsoft</a>
-                        <a class="dropdown-item" href="majorEvents.html">Major Events</a>
-                        <a class="dropdown-item" href="1996.html">Year 1995 onwards</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="/history">History</a>
                 </li>
             </ul>
         </div>
     </nav>
 </div>
+
 
 
 <div id="content">{% block content %}{% endblock %}</div>
@@ -74,19 +80,16 @@
         crossorigin="anonymous"></script>
 
 <div class="container-fluid">
-    <footer class="bg-dark text-center text-white">
-        {% block footer %}
+    {% block footer %}
+    <footer class="bg-dark text-center text-white mt-auto">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
                     <p>Name: Rajesh Gnanasekaran <br>
                         Email: rg48@njit.edu</p>
                 </div>
-
             </div>
-
         </div>
-        <!-- Grid container -->
 
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -95,13 +98,13 @@
             <div>
                 <a class="text-white"
                    href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frajesh007x.github.io%2FinternetHistory%2Fpublic_html%2FArticle3_RJ.html">
-                    Article3_Validation</a>
+                    Github</a>
             </div>
         </div>
-        <!-- Copyright -->
-        {% endblock %}
-    </footer>
 
+    </footer>
+    {% endblock %}
 </div>
+
 </body>
 </html>
