--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -3,62 +3,70 @@
 {% block head %}
 {{ super() }}
 <style type="text/css">
-    .important {
-        color: #336699;
+    .res{
+        min-height: 100vh;
     }
 </style>
 {% endblock %}
 {% block content %}
-<div class="container">
-    <h4 class="text-center">~ Calculation Result ~</h4>
-    <!--    search button-->
-    <form class="form-inline my-2 my-lg-0 justify-content-end">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+<div class="container-fluid res">
+    <div class="row">
+        <div class="col">
+            <h1>Calculation Result</h1>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-success" role="alert">
+                {{ message }}
+            </div>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
 
-    <table class="table table-hover table-bordered border-primary table-dark table-striped">
-        <tr>
-            <th>Value 1</th>
-            <th>Value 2</th>
-            <th>Operation</th>
-            <th>Result</th>
-        </tr>
-        <tr>
-            <td>{{ value1 }}</td>
-            <td>{{ value2 }}</td>
-            <td>{{ operation }}</td>
-            <td colspan="2">{{ result }}</td>
-        </tr>
-    </table>
+            <div class="container">
+                <table class="table table-striped table-dark">
+                    <thead>
+                    <tr class="">
+                        {% for col in titles %}
+                        <th scope="col">{{col}}</th>
+                        {% endfor %}
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for row in row_data %}
+                    <tr>
+                        {% for col, row_ in zip(titles, row) %}
+                        <th scope="row">{{row_}}</th>
+                        {% endfor %}
+                    </tr>
+                    {% endfor %}
+                    </tbody>
 
+                </table>
+
+
+<!--                <table class="table table-hover table-bordered  table-striped">-->
+<!--                    <tr class="table-primary">-->
+<!--                        <th>Value 1</th>-->
+<!--                        <th>Value 2</th>-->
+<!--                        <th>Operation</th>-->
+<!--                        <th>Result</th>-->
+<!--                    </tr>-->
+<!--                    <tr class="table-info">-->
+<!--                        <td>{{ value1 }}</td>-->
+<!--                        <td>{{ value2 }}</td>-->
+<!--                        <td>{{ operation }}</td>-->
+<!--                        <td colspan="2">{{ result }}</td>-->
+<!--                    </tr>-->
+<!--                </table>-->
+
+            </div>
+            <!--            <strong>Value 1: </strong> {{ value1 }} <br>-->
+            <!--            <strong>Value 2: </strong> {{ value2 }} <br>-->
+            <!--            <strong>Operation: </strong> {{ operation }} <br>-->
+            <!--            <strong>Result: </strong> {{ result }}-->
+        </div>
+    </div>
 </div>
 
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-{% for message in messages %}
-<div class="alert alert-success" role="alert">
-    {{ message }}
-</div>
-{% endfor %}
-{% endif %}
-{% endwith %}
-
-
-<!--    Pagination-->
-<div class="container">
-    <nav aria-label="Page navigation example">
-        <ul class="pagination pagination-circle pg-blue justify-content-end">
-            <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-            </li>
-        </ul>
-    </nav>
-</div>
 {% endblock %}
