project 3 added articles to calculator function and added styling

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -97,7 +97,7 @@
             <a class="text-white" href="#">Top of the page</a>
             <div>
                 <a class="text-white"
-                   href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frajesh007x.github.io%2FinternetHistory%2Fpublic_html%2FArticle3_RJ.html">
+                   href="https://github.com/Rajesh007x/calc2/tree/project3_refactor">
                     Github</a>
             </div>
         </div>
