--- a/app/templates/calculator2.html
+++ b/app/templates/calculator2.html
@@ -29,12 +29,12 @@
 
                 <form action="/calculator" method="POST" class="border border-secondary p-5 form-cls bg-light">
                     <div class="form-group">
-                        <label for="value1" class="col-sm-4 col-form-label">Value 1:</label>
+                        <label for="value1" class="col-sm-4 col-form-label">:</label>
                         <input type="text" id="value1" name="value1" class="form-control">
                     </div>
 
                     <div class="form-group">
-                        <label for="value2" class="col-sm-4 col-form-label">Value 2:</label>
+                        <label for="value2" class="col-sm-4 col-form-label">Value_2:</label>
                         <input type="text" id="value2" name="value2" class="form-control">
                     </div>
                     <fieldset class="py-2">
