--- a/app/templates/SoC.html
+++ b/app/templates/SoC.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Separation of Concern</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="css/Article4_RJ.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/Article4_RJ.css') }}">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -18,46 +18,35 @@
 
 <div class="header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-0">
-    <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="logo" class="img-responsive" ></a>
+    <a class="navbar-brand" href="index.html"><img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="logo" class="img-responsive" ></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="history.html">Brief History</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="web.html">Beginning of Web<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="evolution.html">Evolution of Internet</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Python Articles
-            <span class="badge badge-dark">4</span>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
-            <a class="dropdown-item" href="Article1_RJ.html">Pylint[Tips & Tricks]</a>
-            <a class="dropdown-item" href="Article2_RJ.html">AAA Testing</a>
-            <a class="dropdown-item" href="Article3_RJ.html">OOPs Concept</a>
-            <a class="dropdown-item active" href="SoC.html">Soc[Separation of Concern]</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            More information
-            <span class="badge badge-dark">3</span>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="software.html">IBM/Microsoft</a>
-            <a class="dropdown-item" href="majorEvents.html">Major Events</a>
-            <a class="dropdown-item" href="1996.html">Year 1995 onwards</a>
-          </div>
-        </li>
-      </ul>
-    </div>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/calculator">Calculator
+                    <span class="badge badge-danger">NEW</span>
+                    </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Python Articles
+                        <span class="badge badge-dark">4</span>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
+                        <a class="dropdown-item" href="/article1">Pylint[Tips & Tricks]</a>
+                        <a class="dropdown-item" href="/article2">AAA Testing</a>
+                        <a class="dropdown-item" href="/article3">OOPs Concept</a>
+                        <a class="dropdown-item" href="/article4">Soc[Separation of Concern]</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/history">History</a>
+                </li>
+            </ul>
+        </div>
   </nav>
 </div>
 <div class="container">
@@ -95,7 +84,7 @@
                 parts of the original algorithm get exported and encapsulated in separate smaller functions with a private access level. We gain the code clarity, and chunks of the algorithm eventually become reusable by other parts, even if we initially didn’t expect this to happen.
               </div>
               <div class="text-center mb-4">
-                <img src="images/refactor.png" alt="ch"/>
+                <img src="{{ url_for('static', filename='images/refactor.png') }}" alt="ch"/>
               </div>
               <div class="card card-body bg-dark text-white">
                 In the above calculator data if you see , we have done Refactoring where we had more lines of code and we simplified the codes and saved it into
@@ -114,7 +103,7 @@
                 Every existing architectural pattern provides this strategy. Take we, for example, the Model-View-Controller, we would see that the View is not allowed to interact with the Model directly and should use the Controller as the intermediary.
               </div>
               <div class="text-center mb-4">
-                <img src="images/chart.png" alt="ch"/>
+                <img src="{{ url_for('static', filename='images/chart.png') }}" alt="ch"/>
               </div>
             </div>
             <br>
@@ -127,7 +116,7 @@
                 The process very much resembles what we had to do for functions: estrange less-closely related functionality and group up the features serving the same distinct purpose.
               </div>
               <div class="text-center mb-4">
-                <img src="images/grp.png" alt="ch"/>
+                <img src="{{ url_for('static', filename='images/grp.png') }}" alt="ch"/>
               </div>
               <div class="card card-body bg-dark text-white">
                 In our Calculator as you can see on the left side , we have grouped all our calculator calculation functions together in one module (i.e Calculations )
@@ -207,8 +196,9 @@
         © 2021 Copyright:
         <a class="text-white" href="#">Top of the page</a>
         <div>
-          <a class="text-white" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frajesh007x.github.io%2FinternetHistory%2Fpublic_html%2FSoC.html">
-            Article4_Validation</a>
+          <a class="text-white"
+                   href="https://github.com/Rajesh007x/calc2/tree/project3_refactor">
+                    Github</a>
         </div>
       </div>
     </footer>
