--- a/app/templates/calculator.html
+++ b/app/templates/calculator.html
@@ -16,56 +16,136 @@
 </style>
 {% endblock %}
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/Article4_RJ.css') }}">
+<div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
+<div class="bg bg2 bg3"></div>
+<div class="bg bg"></div>
+<div class="bg2 bg3"></div>
 <div class="container-fluid py-5">
     <div class="row">
         <div class="col">
-            <h1 class="text-center">My Calculator</h1>
+            <h1 class="text-center">Calculator</h1>
             {% if error %}
             <div class="alert alert-danger error" role="alert">
                 {{ error }}
             </div>
             {% endif %}
-            <div class="mb-4 d-flex justify-content-center align-items center ">
-
-                <form action="/calculator" method="POST" class="border border-secondary p-5 form-cls bg-light">
-                    <div class="form-group">
-                        <label for="value1" class="col-sm-4 col-form-label">Value 1:</label>
-                        <input type="text" id="value1" name="value1" class="form-control">
+            <div class="d-flex justify-content-center">
+                <span class="border border-info rounded p-3 p-5 my-4 bg-white text-dark shadow-lg ">
+                <form action="/calculator" method="POST">
+                    <h4 class="text-center"><u>Calculator</u></h4><br>
+                    <div class="row mb-3">
+                        <label for="value1" class="col-sm-3 col-form-label">Value_1</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="value1" name="value1"
+                                   placeholder="First number">
+                        </div>
                     </div>
-
-                    <div class="form-group">
-                        <label for="value2" class="col-sm-4 col-form-label">Value 2:</label>
-                        <input type="text" id="value2" name="value2" class="form-control">
+                    <div class="row mb-3">
+                        <label for="value2" class="col-sm-3 col-form-label">Value_2</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="value2" name="value2"
+                                   placeholder="Second number">
+                        </div>
                     </div>
-                    <fieldset class="py-2">
-                        <legend>Operation</legend>
-                        <div>
-                            <input type="radio" name="operation" id="addition" value="addition" checked
-                                   class="form-check-input">
-                            <label for="addition" class="form-check-label">addition</label>
-                        </div>
-                        <div>
-                            <input type="radio" name="operation" id="subtraction" value="subtraction"
-                                   class="form-check-input">
-                            <label class="form-check-label" for="subtraction">subtraction</label>
-                        </div>
-                        <div>
-                            <input type="radio" name="operation" id="multiplication" value="multiplication"
-                                   class="form-check-input">
-                            <label class="form-check-label" for="multiplication">multiplication</label>
-                        </div>
-                        <div>
-                            <input type="radio" name="operation" id="division" value="division"
-                                   class="form-check-input">
-                            <label class="form-check-label" for="division">division</label>
+                    <fieldset class="row mb-3">
+                        <legend class="col-form-label col-sm-8 pt-0">Operation :</legend>
+                        <div class="col-sm-6">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="operation" id="addition"
+                                       value="addition">
+                                <label class="form-check-label" for="addition">
+                                    Addition
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="operation" id="subtraction"
+                                       value="subtraction">
+                                <label class="form-check-label" for="subtraction">
+                                    Subtraction
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="operation" id="multiplication"
+                                       value="multiplication">
+                                <label class="form-check-label" for="multiplication">
+                                    Multiplication
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="operation" id="division"
+                                       value="division">
+                                <label class="form-check-label" for="division">
+                                    Division
+                                </label>
+                            </div>
+
                         </div>
                     </fieldset>
-                    <div class="text-center pt-2 ">
-                        <input type="submit" value="Submit" class="btn btn-primary">
+                    <div class="row mb-3">
+                        <div class="col-sm-10 offset-sm-2">
+                            <div class="form-group">
+                                <div class="form-check">
+                                    <input class="form-check-input is-invalid" type="checkbox" value=""
+                                           id="invalidCheck3" required>
+                                        <label class="form-check-label" for="invalidCheck3">
+                                             Confirm
+                                        </label>
+                                        <div class="invalid-feedback">
+                                            You must confirm before submitting.
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+
                 </form>
+                    </span>
+                <!--            <div class="mb-4 d-flex justify-content-center align-items center ">-->
+
+                <!--                <form action="/calculator" method="POST" class="border border-secondary p-5 form-cls bg-light">-->
+                <!--                    <div class="form-group">-->
+                <!--                        <label for="value1" class="col-sm-4 col-form-label">Value_1:</label>-->
+                <!--                        <input type="text" id="value1" name="value1" class="form-control">-->
+                <!--                    </div>-->
+
+                <!--                    <div class="form-group">-->
+                <!--                        <label for="value2" class="col-sm-4 col-form-label">Value_2:</label>-->
+                <!--                        <input type="text" id="value2" name="value2" class="form-control">-->
+                <!--                    </div>-->
+                <!--                    <fieldset class="py-2">-->
+                <!--                        <legend>Operation</legend>-->
+                <!--                        <div>-->
+                <!--                            <input type="radio" name="operation" id="addition" value="addition" checked-->
+                <!--                                   class="form-check-input">-->
+                <!--                            <label for="addition" class="form-check-label">addition</label>-->
+                <!--                        </div>-->
+                <!--                        <div>-->
+                <!--                            <input type="radio" name="operation" id="subtraction" value="subtraction"-->
+                <!--                                   class="form-check-input">-->
+                <!--                            <label class="form-check-label" for="subtraction">subtraction</label>-->
+                <!--                        </div>-->
+                <!--                        <div>-->
+                <!--                            <input type="radio" name="operation" id="multiplication" value="multiplication"-->
+                <!--                                   class="form-check-input">-->
+                <!--                            <label class="form-check-label" for="multiplication">multiplication</label>-->
+                <!--                        </div>-->
+                <!--                        <div>-->
+                <!--                            <input type="radio" name="operation" id="division" value="division"-->
+                <!--                                   class="form-check-input">-->
+                <!--                            <label class="form-check-label" for="division">division</label>-->
+                <!--                        </div>-->
+                <!--                    </fieldset>-->
+                <!--                    <div class="text-center pt-2 ">-->
+                <!--                        <input type="submit" value="Submit" class="btn btn-primary">-->
+                <!--                    </div>-->
+                <!--                </form>-->
+                <!--            </div>-->
             </div>
         </div>
     </div>
 </div>
-{% endblock %}
+    {% endblock %}
