--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -24,7 +24,7 @@
 <div class="container">
     <br>
     <h2 class="text-center" style="color: white">History Of Internet</h2>
-    <div class="p-5 my-4 bg-dark text-dark rounded-3 info shadow-lg p-3 bg-body rounded">
+    <div class="p-5 my-4 bg-dark text-light rounded-3 info shadow-lg p-3 bg-body rounded">
         <div class="container-fluid py-2 mx-4">
             <div class="row mb-4">
                 <div class="col-lg-9">
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <div class="p-5 my-4 bg-dark text-dark rounded-3 info shadow-lg p-3 bg-body rounded">
+    <div class="p-5 my-4 bg-dark text-light rounded-3 info shadow-lg p-3 bg-body rounded">
         <div class="container-fluid py-2 mx-4">
             <div class="row mb-4">
                 <div class="col-lg-9">
